--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -56,6 +56,13 @@
 རྫོང་ཁག་འདི་ནང་ཁྱབ་ཆེ་བའི་ཁ་སྐད་འདི་ཡང་ ང་བཅས་རའི་རྒྱལ་ཡོངས་སྐད་ཡིག་ རྫོང་ཁ་འདི་ར་ཨིན་མས། ཧཱ་རྫོངཁག་ནང་ དྲུང་ཁག་གཅིག་དང་རྒེད་འོག་དྲུག་ སྤྱི་འོག་སུམ་ཅུ་དང་གཡུས་ཚན་ ༩༦ ཡོདཔ་ཨིན། ཧཱ་རྫོང་ཁག་ནང་ ལོ་ཐོག་གཙོ་བོ་ ཀར་ ནག་ བྱཱོ་དང་ ས་ཁ་དམའ་ས་ལས་ཕར་ བྱཱ་ཡང་འཚོ་དོ་ཡོདཔ་ཨིན། མི་སེར་ཚུ་གིས་ ཀེ་བ་དང་ཨེ་མ་ ཨེ་པཱལ་དང་གཞན་དངུལ་ཐོག་ཚུ་ཡང་འཛུག་སྐྱོང་འཐབ་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ནང་ཡོད་པའི་མི་སེར་མང་ཤོས་ཅིག་གིས་ གཡག་དང་ནོར་ བྱམོ་དང་ཕགཔ་ རྟ་ལ་སོགས་པའི་སྒོ་ནོར་གསོ་སྐྱོང་གི་ལཱ་ཚུ་ཡང་འབད་དོ་ཡོདཔ་ཨིན་མས། ཧཱ་རྫོང་ཁག་གི་ས་གཞི་བརྒྱ་ཆ་ ༧༨ དེ་ཅིག་ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ད་ འདི་གིས་ མི་སྡེ་ནང་དཔལ་འབྱོར་གནས་སྟངས་ཀྱི་ནང་ལུ་ ཕན་སྦོམ་སྦེ་ར་ཐོགསཔ་ཨིན་མས། སྤྱི་ལོ་ ༢༠༠༢ ལས་ར་ རྫོང་ཁག་འདི་ནང་ ལྟ་བཤལ་གྱི་སྒོ་འདི་ཕྱེ་ཡོད་རུང་ སྤ་རོ་ ཐིམ་ཕུག་དང་བུམ་ཐང་བཟུམ་ཅིག་ར་འདི་ཡར་རྒྱས་འགྱོ་མ་ཚུགས་པས། རྫོང་ཁག་འདི་ནང་ཡོད་པའི་ མེ་རི་སྤུན་གསུམ་གྱི་ཉེ་འདབས་ལུ་ རྩ་ཆེ་བའི་ ལྷ་ཁང་དཀརཔོ་དང་གནགཔོ་གཉིས་ཡོདཔ་མ་ཚད་ ལྷ་ཁང་འདི་ ཧེ་མ་དུས་རབས་ ༧ པ་ལས་ར་བཞེངས་ཡོད་པའི་ལོ་རྒྱུས་འདུག། ལུང་གཤོང་འདི་གི་ལྟག་ལུ་ར་ ཧཱ་དགོན་པ་ཟེར་མི་ལྷ་ཅིག་ཡང་ཡོདཔ་ཨིན། ལྷ་ཁང་འདི་ ལོ་ཨ་རྟག་ར་ རང་ཟླ་ ༡༡ པའི་ཚེས་ ༡༠ ལུ་ སངས་རྒྱས་འོག་དཔག་མེད་ལུ་མཆོད་པ་ཚུ་ཕུལ་སྲོལ་ཡོདཔ་ཨིན།<br>
 དོ་རུང་ ལྷ་ཁང་དཀརཔོ་དང་གནགཔོ་གི་ཉེ་འདབས་ལུ་ མཆོད་རྟེན་ཅིག་ཡོད་མི་དེའི་སྦོ་ལོ་ཁར་ཡོད་པའི་རྡོ་སྦོམ་ཅིག་གུར་ གུ་རུ་རིན་པོ་ཆེ་གི་དབུ་ཞྭ་དང་སྐུ་རྗེས་ཚུ་ཡང་མཇལ་ནི་འདུག།</big> 
 
+=== པདྨ་དགའ་ཚལ་རྫོང་ཁག། ===
+<big>༉ པདྨ་དགའ་ཚལ་རྫོང་ཁག་འདི་ ཤར་ལྷོ་ཁ་ཐུག་ལུ་ཆགས་ཡོད་པའི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་ཁལ་གཅིག་གི་གྲས་ལས་གཅིག་ཨིན། ས་གཞི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༠༢༣ འབད་མི་རྫོང་ཁག་འདི་ རྒྱ་མཚོའི་མཐའ་མ་ལས་ མཐོ་ཚད་མི་ཊར་ ༡༠༠༠ ལས་ ༣༥༠༠ གི་ས་ཁར་ཆགས་ཏེ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ བྱང་ཤར་ཁ་ཐུག་བཀྲ་ཤིས་སྒང་དང་ནུབ་བྱང་ཁ་ཐུག་མོང་སྒར་ ནུབ་ཁ་ཐུག་གཞལམ་སྒང་ ཤར་ཁ་ཐུག་བསམ་གྲུབ་ལྗོངས་མཁར་དང་ལྷོ་ཁ་ཐུག་རྒྱ་གར་ཨ་སམ་གྱི་མངའ་སྡེ་ཚུ་གི་སྦུག་ལུ་ཆགས་ཏེ་ཡོདཔ་ ཨིན། <br>
+རྫོང་ཁག་འདི་གི་ས་གཞི་བརྒྱ་ཆ་ ༨༧.༦༥ དེ་ཅིག་ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ད་ དེ་ནང་མང་ཤོས་ཅིག་ ཀོང་ཤིང་གི་རིགས་ཚུ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་གི་གནམ་གཤིས་གནས་སྟངས་འབད་བ་ཅིན་ གནམ་བྱཱར་ལུ་ཚ་དྲོད་དང་རློན་གཤེར་ཅན་སྦེ་ སྡོད་དོ་ཡོདཔ་ད་ གནམ་དགུན་ལུ་འབད་བ་ཅིན་ བསིལ་དྲོད་རན་ཏོག་ཏོ་སྦེ་སྡོད་དོ་ཡོདཔ་ཨིན་མས། <br>
+རྒེད་འོག་བཅུ་གཅིག་ཡོད་པའི་རྫོང་ཁག་འདི་ནང་ ཁྱིམ་གུང་པ་ ༤༤༨༦ ཡོད་པའི་ཁར་ མི་རློབས་བསྡོམས་ ༢༥༠༠༠ དེ་ཅིག་ཡོདཔ་ད་ དེ་ནང་བཟའ་སྤྱོད་ཀྱི་དོན་ལུ་ ས་གཞི་ཡང་མང་ཤོས་ཅིག་སྐམ་ཞིང་ ཡོདཔ་ཨིན་མས། རྫོང་ཁག་འདི་ནང་གི་རྒེད་འོག་ག་རའི་ནང་ འཁོར་ལམ་ཚུ་ཡོད་མི་འདི་གིས་ ཅ་ཆས་དང་མི་ཚུ་སྐྱེལ་འདྲེན་འབད་ནིའི་ནང་ལུ་ བྱ་སྟབས་བདེ་ཏོག་ཏོ་སོང་སྟེ་ཡོདཔ་ཨིན་མས། དེ་མ་ཚད་ འཁོར་ལམ་འདི་ལས་བརྟེན་ རྫོང་ཁག་དང་དྲུང་ཁག་ རྒེད་འོག་དང་མི་སེར་ཚུ་གི་བར་ན་ འབྲེལ་བ་འཐབ་ནིའི་ནང་ཁེ་ཕན་སྦོམ་བྱུང་སྟེ་འདུག། རྫོང་ཁག་འདི་ནང་ མི་ཚུ་གི་རྒྱུད་ལུ་ གསོ་བ་དང་ཤེས་རིག་ སྒོ་ནོར་དང་སོ་ནམ་ལ་སོགས་པའི་ཞབས་ཏོག་ཚུ་བྱིན་ནིའི་དོན་ལུ་ ཞི་གཡོགཔོ་ ༧༧༢ དེ་ཅིག་ཡོདཔ་ཨིན་མས། རྫོང་ཁག་འདི་ནང་ མི་ཚུ་གི་རྒྱུད་ལུ་ ཕྱག་དང་སྙན་དར་ སྨན་ལམ་དང་ཁ་ཐུན་ཚུ་གཏང་ནིའི་དོན་ལུ་ ལྷ་ཁང་དང་དགོན་སྡེ་ ༡༡༢ དེ་ཅིག་ཡོད་པའི་ནང་ལས་ ང་བཅས་རའི་རྒྱལ་རབས་ནང་ལུ་ ག་ནི་བ་རྩ་ཆེ་བའི་ ཡོངས་ལ་དགོན་པ་དང་ཁེ་རི་དགོན་པ་ གདུང་དཀར་དགོན་པ་གསུམ་ཡང་ རྫོང་ཁག་འདི་ནང་འདུག། <br>
+རྫོང་ཁག་འདི་ནང་ཡོད་པའི་ ཡོངས་ལ་རི་བོ་དཔལ་འབར་དར་རྒྱས་ཆོས་གླིང་དགོན་པའམ་དཔལ་རི་དགོན་པ་ ཡོངས་གྲགས་ལུ་ ཡོངས་ལ་དགོན་པ་ཟེར་ཞུ་མི་ལྷ་ཁང་འདི་ ཡོངས་ལ་བླམ་གཉིས་པ་ རྡོ་རྗེ་རྒྱ་མཚོ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༧༣༦ ལོ་ལུ་བཞེངས་གནང་ཡོད་པའི་ལོ་རྒྱུས་འདུག།  ས་གནས་འདི་ གཏེར་སྟོན་ཆེན་པོ་ རིག་འཛིན་འཇིགས་མེད་གླིང་པའི་ཞལ་བཀོད་དང་ འཁྲིལ་ མཁས་གྲུབ་འཇིགས་མེད་ཀུན་བྲལ་མཆོག་གིས་ངོས་འཛིན་གནང་ཡོདཔ་ད་ དེ་བསྒང་ སྒྲུབ་སྡེ་ལྟེ་བ་ཆུང་ཀུ་ཅིག་གཞི་བཙུགས་ གནང་ནུག། ཡོངས་གྲགས་ཅན་གྱི་ཡོངས་ལ་ཕུར་པའི་སྒྲུབ་ཆེན་འདི་ མཁས་གྲུབ་འཇིགས་མེད་ཀུན་བྲལ་གྱི་སྐབས་ལས་ར་འགོ་བཙུགས་ཡོདཔ་ ད་ དེ་གི་ཤུལ་ལས་ བླམ་རིམ་ཐེངས་ ༡༦ བྱོན་ཡོདཔ་ཨིན་མས། དགོན་པ་འདི་ ཚར་གཅིག་ཉམས་ཆག་ཤོར་ཡོད་རུང་ ཤུལ་ལས་ གྲུབ་དབང་བསོད་ནམས་བཟང་པོ་མཆོག་གིས་ སྔར་བཞིན་ཉམས་གསོ་ཞུ་ཡོདཔ་ཨིན་མས། དོ་རུང་ སྤྱི་ལོ་ ༢༠༠༩ སྤྱི་ཟླ་ ༩ པའི་སྤྱི་ཚེས་ ༢༡ ལུ་ ས་ཡོམས་ཤུགས་སྦེ་རྐྱབ་མི་འདི་གིས་ ལྷ་ཁང་ལུ་གནོད་རྐྱེན་སྦོམ་སྦེ་ར་ རྐྱབ་ཡོད་རུང་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེ་མཆོག་གིས་ དགོན་པ་འདི་ འདི་འཕྲོ་ལས་ར་ སྔར་བཞིན་ཉམས་གསོ་ཞུ་དགོ་པའི་བཀའ་རྒྱ་དང་བསྟུན་ ལོག་སྟེ་ར་ཉམས་གསོ་ཞུ་སྟེ་ཡོདཔ་ཨིན་མས།<br>
+ང་བཅས་རའི་ མ་འོངས་འགོ་ཁྲིདཔ་ཚུ་ཤེས་ཡོན་སྦྱངས་ནིའི་དོན་ལུ་ སློབ་གྲྭ་ཆུང་བ་ ༡༨ དང་འབྲིང་རིམ་འོག་མའི་སློབ་གྲྭ་ ༦ འབྲིང་རིམ་གོང་མའི་སློབ་གྲྭ་ ༢ དང་ དེ་ལས་ ཧེ་མ་ ཤེས་ཡོན་སྦྱངས་ནིའི་གོ་སྐབས་མ་ཐོབ་མི་ཚུ་གི་དོན་ལུ་ གཞི་རྟེན་ཤེས་ཡོན་སྦྱང་སའི་ལྟེ་བ་ ༣༦ གཞི་བཙུགས་འབད་དེ་ཡོད་མི་དེ་ནང་ ད་ལྟོ་ སློབ་ཕྲུག་ཡོངས་བསྡོམས་ ༦༡༨༠ དང་ གཞི་རྟེན་ཤེས་ཡོན་སྦྱངས་མི་ ༤༠༢ དེ་ཅིག་ཡོདཔ་ཨིན། དེ་འབདཝ་ལས་ རྫོང་ཁག་འདི་གི་ བྲི་ལྷག་ཤེས་ཡོན་གྱི་གནས་ཚད་འདི་ བརྒྱ་ཆ་ ༥༦.༡ གུར་ལྷོད་དེ་འདུག། རྫོང་ཁག་འདི་ནང་གི་མི་སེར་ཚུ་གི་རྒྱུད་ལུ་ འཚོ་བའི་གནས་སྟངས་ཡར་དྲག་གཏང་ནིའི་དོན་ལུ་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེའི་ཞབས་ལས་ སའི་སྐྱིད་སྡུག་གནང་སྟེ་ བོ་རང་མ་དང་ཁྱི་ན་དང་ལུ་ གཞི་གསར་གཞི་བཙུགས་འབད་མི་འདི་གིས་ ཕན་སྦོམ་སྦེ་ར་ཐོགས་ཏེ་ཡོདཔ་ཨིན་མས། པདྨ་དགའ་ཚལ་རྫོང་ཁག་ནང་ རྒེད་འོག་ བཅུ་གཅིག་ཡོད་མི་ཚུ་ཡང་ ཕྱི་མུངས་རྒེད་འོག་དང་ཆོས་འཁོར་གླིང་རྒེད་འོག་ སྐྱོང་ཤིང་བོ་རང་རྒེད་འོག་ བདེ་ཆེན་གླིང་རྒེད་འོག་ གདུང་སྨད་རྒེད་འོག་ མཁར་རྒེད་འོག་ ན་ནོང་རྒེད་འོག་ ནོར་བུ་སྒང་རྒེད་འོག་ ཤུ་མར་རྒེད་འོག་ གཡུ་རུང་རྒེད་འོག་ ཟོ་བལ་རྒེད་འོག་ཚུ་ཨིནམ་ད་ ནུར་བུ་སྒང་རྒེད་འོག་ནང་ལུ་འབད་བ་ཅིན་ རྒྱལ་ཡོངས་མ་ནཱསི་གླིང་ཀ་གི་ཆ་ཤས་ཅིག་ཡང་དེ་ནང་ཚུད་དེ་ཡོདཔ་ ཨིན་མས། པདྨ་དགའ་ཚལ་རྫོང་ཁག་གིས་ གོང་འཕེལ་དང་འབྲེལ་ལཱ་ག་ཅི་ར་འབད་རུང་ རྫོང་ཁག་གི་འཆར་སྣང་ ཤར་ཕྱོགས་ལུང་ཕྱོགས་ཀྱི་དོན་ལུ་ཚོང་འབྲེལ་འཐབ་སའི་ལྟེ་བ་ཅིག་སྦེ་བཟོ་ནི་དང་ འཚོ་བའི་གནས་སྟངས་ཡུན་བརྟན་དང་འདྲ་མཉམ་གྱི་སྒོ་ ལས་ སྐྱིད་ཉམས་ལྡན་པའི་རྫོང་ཁག་ཅིག་སྦེ་བཟོ་ལུ་དམིགས་གཏད་བསྐྱེད་དེ་འབད་དོ་ཡོདཔ་ཨིན་མས།</big>
+
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
@@ -66,3 +73,4 @@
 # Wikipedia contributors. (2021). Zhemgang. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Zhemgang&oldid=1012781228
 # Wikipedia contributors. (2021). Chukha District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Chukha_District&oldid=1053307238
 # Wikipedia contributors. (2021). Haa district. In Wikipedia, The Free Encyclopedia. Retrieved from  https://nl.wikipedia.org/w/index.php?title=Haa_(district)&oldid=49239570.
+# Wikipedia contributors. (2021). Pemagatshel District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Pemagatshel_District&oldid=1055317735
