--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -63,6 +63,15 @@
 རྫོང་ཁག་འདི་ནང་ཡོད་པའི་ ཡོངས་ལ་རི་བོ་དཔལ་འབར་དར་རྒྱས་ཆོས་གླིང་དགོན་པའམ་དཔལ་རི་དགོན་པ་ ཡོངས་གྲགས་ལུ་ ཡོངས་ལ་དགོན་པ་ཟེར་ཞུ་མི་ལྷ་ཁང་འདི་ ཡོངས་ལ་བླམ་གཉིས་པ་ རྡོ་རྗེ་རྒྱ་མཚོ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༧༣༦ ལོ་ལུ་བཞེངས་གནང་ཡོད་པའི་ལོ་རྒྱུས་འདུག།  ས་གནས་འདི་ གཏེར་སྟོན་ཆེན་པོ་ རིག་འཛིན་འཇིགས་མེད་གླིང་པའི་ཞལ་བཀོད་དང་ འཁྲིལ་ མཁས་གྲུབ་འཇིགས་མེད་ཀུན་བྲལ་མཆོག་གིས་ངོས་འཛིན་གནང་ཡོདཔ་ད་ དེ་བསྒང་ སྒྲུབ་སྡེ་ལྟེ་བ་ཆུང་ཀུ་ཅིག་གཞི་བཙུགས་ གནང་ནུག། ཡོངས་གྲགས་ཅན་གྱི་ཡོངས་ལ་ཕུར་པའི་སྒྲུབ་ཆེན་འདི་ མཁས་གྲུབ་འཇིགས་མེད་ཀུན་བྲལ་གྱི་སྐབས་ལས་ར་འགོ་བཙུགས་ཡོདཔ་ ད་ དེ་གི་ཤུལ་ལས་ བླམ་རིམ་ཐེངས་ ༡༦ བྱོན་ཡོདཔ་ཨིན་མས། དགོན་པ་འདི་ ཚར་གཅིག་ཉམས་ཆག་ཤོར་ཡོད་རུང་ ཤུལ་ལས་ གྲུབ་དབང་བསོད་ནམས་བཟང་པོ་མཆོག་གིས་ སྔར་བཞིན་ཉམས་གསོ་ཞུ་ཡོདཔ་ཨིན་མས། དོ་རུང་ སྤྱི་ལོ་ ༢༠༠༩ སྤྱི་ཟླ་ ༩ པའི་སྤྱི་ཚེས་ ༢༡ ལུ་ ས་ཡོམས་ཤུགས་སྦེ་རྐྱབ་མི་འདི་གིས་ ལྷ་ཁང་ལུ་གནོད་རྐྱེན་སྦོམ་སྦེ་ར་ རྐྱབ་ཡོད་རུང་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེ་མཆོག་གིས་ དགོན་པ་འདི་ འདི་འཕྲོ་ལས་ར་ སྔར་བཞིན་ཉམས་གསོ་ཞུ་དགོ་པའི་བཀའ་རྒྱ་དང་བསྟུན་ ལོག་སྟེ་ར་ཉམས་གསོ་ཞུ་སྟེ་ཡོདཔ་ཨིན་མས།<br>
 ང་བཅས་རའི་ མ་འོངས་འགོ་ཁྲིདཔ་ཚུ་ཤེས་ཡོན་སྦྱངས་ནིའི་དོན་ལུ་ སློབ་གྲྭ་ཆུང་བ་ ༡༨ དང་འབྲིང་རིམ་འོག་མའི་སློབ་གྲྭ་ ༦ འབྲིང་རིམ་གོང་མའི་སློབ་གྲྭ་ ༢ དང་ དེ་ལས་ ཧེ་མ་ ཤེས་ཡོན་སྦྱངས་ནིའི་གོ་སྐབས་མ་ཐོབ་མི་ཚུ་གི་དོན་ལུ་ གཞི་རྟེན་ཤེས་ཡོན་སྦྱང་སའི་ལྟེ་བ་ ༣༦ གཞི་བཙུགས་འབད་དེ་ཡོད་མི་དེ་ནང་ ད་ལྟོ་ སློབ་ཕྲུག་ཡོངས་བསྡོམས་ ༦༡༨༠ དང་ གཞི་རྟེན་ཤེས་ཡོན་སྦྱངས་མི་ ༤༠༢ དེ་ཅིག་ཡོདཔ་ཨིན། དེ་འབདཝ་ལས་ རྫོང་ཁག་འདི་གི་ བྲི་ལྷག་ཤེས་ཡོན་གྱི་གནས་ཚད་འདི་ བརྒྱ་ཆ་ ༥༦.༡ གུར་ལྷོད་དེ་འདུག། རྫོང་ཁག་འདི་ནང་གི་མི་སེར་ཚུ་གི་རྒྱུད་ལུ་ འཚོ་བའི་གནས་སྟངས་ཡར་དྲག་གཏང་ནིའི་དོན་ལུ་ མི་དབང་མངའ་བདག་རིན་པོ་ཆེའི་ཞབས་ལས་ སའི་སྐྱིད་སྡུག་གནང་སྟེ་ བོ་རང་མ་དང་ཁྱི་ན་དང་ལུ་ གཞི་གསར་གཞི་བཙུགས་འབད་མི་འདི་གིས་ ཕན་སྦོམ་སྦེ་ར་ཐོགས་ཏེ་ཡོདཔ་ཨིན་མས། པདྨ་དགའ་ཚལ་རྫོང་ཁག་ནང་ རྒེད་འོག་ བཅུ་གཅིག་ཡོད་མི་ཚུ་ཡང་ ཕྱི་མུངས་རྒེད་འོག་དང་ཆོས་འཁོར་གླིང་རྒེད་འོག་ སྐྱོང་ཤིང་བོ་རང་རྒེད་འོག་ བདེ་ཆེན་གླིང་རྒེད་འོག་ གདུང་སྨད་རྒེད་འོག་ མཁར་རྒེད་འོག་ ན་ནོང་རྒེད་འོག་ ནོར་བུ་སྒང་རྒེད་འོག་ ཤུ་མར་རྒེད་འོག་ གཡུ་རུང་རྒེད་འོག་ ཟོ་བལ་རྒེད་འོག་ཚུ་ཨིནམ་ད་ ནུར་བུ་སྒང་རྒེད་འོག་ནང་ལུ་འབད་བ་ཅིན་ རྒྱལ་ཡོངས་མ་ནཱསི་གླིང་ཀ་གི་ཆ་ཤས་ཅིག་ཡང་དེ་ནང་ཚུད་དེ་ཡོདཔ་ ཨིན་མས། པདྨ་དགའ་ཚལ་རྫོང་ཁག་གིས་ གོང་འཕེལ་དང་འབྲེལ་ལཱ་ག་ཅི་ར་འབད་རུང་ རྫོང་ཁག་གི་འཆར་སྣང་ ཤར་ཕྱོགས་ལུང་ཕྱོགས་ཀྱི་དོན་ལུ་ཚོང་འབྲེལ་འཐབ་སའི་ལྟེ་བ་ཅིག་སྦེ་བཟོ་ནི་དང་ འཚོ་བའི་གནས་སྟངས་ཡུན་བརྟན་དང་འདྲ་མཉམ་གྱི་སྒོ་ ལས་ སྐྱིད་ཉམས་ལྡན་པའི་རྫོང་ཁག་ཅིག་སྦེ་བཟོ་ལུ་དམིགས་གཏད་བསྐྱེད་དེ་འབད་དོ་ཡོདཔ་ཨིན་མས།</big>
 
+=== བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག། ===
+<big>༉ བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་འདི་ ཤར་ལྷོ་ཁ་ཐུག་ལུ་ཆགས་ཏེ་ཡོད་པའི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་ཁལ་གཅིག་གྲས་ལས་གཅིག་ ཨིན། ས་གཞི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༨༧༧.༩༤ འབད་མི་ རྫོང་ཁག་འདི་ རྒྱ་གར་ཨཱ་སམ་གྱི་མངའ་སྡེ་དང་ཨ་རུ་ན་ཅཱལ་པྲ་ ཌེཤ་གི་ས་མཚམས་དང་ཅིག་ཁར་མཐུད་འབྲེལ་འབད་དེ་ཡོདཔ་ཨིན། <br>
+རྒྱ་མཚོའི་མཐའ་མ་ལས་ མཐོ་ཚད་མི་ཊར་ ༦༠༠-༡༢༠༠ དེ་ཅིག་གི་ས་ཁར་ཆགས་ཏེ་ཡོད་པའི་ བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་འདི་ནང་ བསམ་གྲུབ་ལྗོངས་མཁར་ཁྲོམ་སྡེ་དང་ བསམ་གྲུབ་ཆོས་གླིང་དྲུང་ཁག་ ཇོ་མོ་གཙང་ཁ་དྲུང་ཁག་ ཝང་ཕུག་རྒེད་འོག་དང་གོམ་དར་རྒེད་འོག་ བདེ་བ་ཐང་རྒེད་འོག་ ཕུན་ཚོགས་ཐང་ རྒེད་འོག་ པདྨ་ཐང་རྒེད་འོག་ བསམ་རང་རྒེད་འོག་ མར་ཚ་ལ་རྒེད་འོག་ གླང་ཅན་ཕུག་རྒེད་འོག་ གསེར་ཐིག་རྒེད་འོག་ ལའུ་རི་རྒེད་འོག་ཚུ་རྩིས་པའི་ ཁྲོམ་སྡེ་གཅིག་དང་ དྲུང་ཁག་གཉིས་ རྒེད་འོག་བཅུ་གཅིག་ཡོདཔ་མ་ཚད་ སྤྱི་འོག་ ༥༨ དང་གཡུས་ཚན་ ༡༩༡ ཡོདཔ་ཨིན།<br>
+གཡུས་ཚན་ ༡༩༡ དང་སྤྱི་འོག་ ༥༨ རྒེད་འོག་ ༡༡ དང་དྲུང་ཁག་ ༢ འབད་མི་རྫོང་ཁག་འདི་ནང་ ཁྱིམ་གུང་པ་ ༤༨༠༨ ཡོདཔ་ད་ ཕོ་སྐྱེས་ ༢༠༧༨༦ དང་ཨམ་སྲུ་ ༡༩༩༨༠ འབདཝ་ད་ མི་རློབས་ཡོངས་བསྡོམས་ ༤༠༧༦༦ དེ་ཅིག་ཡོདཔ་ཨིན་མས། <br>
+རྫོང་ཁག་འདི་ ས་ཁ་དམའ་ལུ་འབད་ནི་འདི་གིས་ དེའི་གནམ་གཤིས་གནས་སྟངས་ཡང་ མང་ཤོས་ཅིག་ར་  དྲོད་ཤུགས་ཅན་ཅིག་སྦེ་ར་ སྡོད་དོ་ཡོདཔ་ཨིན་མས། དེ་ཡང་ རྫོང་ཁག་འདི་ནང་ དྲོད་ཤུགས་ཀྱི་ཚད་ མཐོ་ཤོས་ར་ ཌི་གི་རི་སེན་ཊི་གེརེཌ་ ༣༦ དང་ དམའ་ཤོས་ ༡༤ གི་བར་སྡོད་པའི་ཁར་ ལོ་བསྟར་ཆར་ཆུ་ཡང་ མི་ལི་མི་ཊར་ ༥༣༠༩.༤ དེ་ཅིག་གི་རྩིས་འབབ་དོ་ཡོདཔ་ཨིན་མས། <br>
+རྫོང་ཁག་གི་ས་གཞི་ཚུ་མང་ཤོས་ཅིག་དང་སྦེ་ཡོད་པའི་ཁར་ ས་བཅུད་དང་ལྡནམ་སྦེ་ཡོད་ནི་འདི་གིས་ སོ་ནམ་དང་དཔལ་འབྱོར་གྱི་ལས་སྣ་ ཚུའི་གོ་སྐབས་དང་འོས་འབབ་སྦོམ་ཡོདཔ་ཨིན་མས། ཨིན་རུང་ ད་ལྟོ་གནས་བཞིན་ཡོད་པའི་ཉན་སྲུང་གི་གནད་དོན་དང་ ས་ཆའི་རང་ གཤིས་ལུ་བརྟེན་ རྫོང་ཁག་འདི་ནང་ བརྩམས་ཡོད་པའི་མི་སྡེ་དཔལ་འབྱོར་གྱི་ལས་སྣ་ཚུ་ལུ་ གདོང་ལེན་ཚུ་བྱུང་སྟེ་ར་ཡོདཔ་ཨིན་མས། གདོང་ལེན་དེ་ཚུ་བྱུང་སྟེ་ར་འབད་རུང་ རྫོང་ཁག་གིས་ བརྩམས་ཡོད་པའི་ལས་སྣ་ཚུ་ ལེགས་ཤོམ་སྦེ་ར་འབད་ཚུགས་ཏེ་ཡོདཔ་ཨིན་མས།<br>
+རྫོང་ཁག་གི་ས་གཞི་ཡོངས་བསྡོམས་ལས་ བརྒྱ་ཆ་ ༨༦.༡༥ འདི་ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ད་ བརྒྱ་ཆ་ ༩༩ དེ་ཅིག་ལུ་ ཉེན་སྲུང་ལྡན་པའི་འཐུང་ཆུ་དང་ བརྒྱ་ཆ་ ༨༧.༡ ལུ་ གློག་མེའི་མཐུན་རྐྱེན་ཚུ་ཡོདཔ་མ་ཚད་ བྲི་ལྷག་ཤེས་ཡོན་གྱི་གནས་ཚད་ བརྒྱ་ཆ་ ༥༢.༤ ཡོད་པའི་གུར་ འགྲུལ་འཕྲིན་གྱི་ཞབས་ཏོག་ བརྒྱ་ཆ་ ༩༧ དང་ བརྒྱ་ཆ་ ༧༤ གི་རྩིས་ སོ་ནམ་ཞིང་ལམ་གྱི་མཐུད་འབྲེལ་ཚུ་འབད་དེ་ཡོདཔ་ཨིན་མས། གྲུབ་འབྲས་འདི་ཚུ་གིས་རྫོང་ཁག་ནང་ མི་སྡེ་དཔལ་འབྱོར་ཡར་དྲག་ འགྱོ་བའི་བརྡ་ཚོན་ཚུ་སྟོནམ་ཨིན་མས། <br>
+བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་འདི་ པདྨ་དགའ་ཚལ་དང་བཀྲ་ཤིས་སྒང་ བཀྲ་ཤིས་གཡང་རྩེ་ ལྷུན་རྩེ་ མོང་སྒར་ཚུ་རྩིས་པའི་ ཤར་ཕྱོགས་རྫོང་ཁག་ལྔ་གི་དོན་ལུ་ ཚོང་འབྲེལ་འཐབ་སའི་ལྟེ་བ་ཅིག་ཨིན། བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་གི་ཁྲོམ་འདི་ རྒྱ་གར་གྱི་ས་མཚམས་དང་མཐུད་འབྲེལ་འབད་དེ་ཡོད་མི་འདི་གིས་ བསམ་གྲུབ་ལྗོངསམཁར་རྫོང་ཁག་རྐྱངམ་ཅིག་མེན་པར་ ཉེ་འདབས་ཀྱི་ ཤར་ཕྱོགས་རྫོང་ཁག་ཚུ་ལུ་ཡང་འདྲན་འདྲ་སྦེ་རང་ཕན་ཐོགས་དོ་ཡོདཔ་ཨིན་མས། རྫོང་ཁག་གི་ཁྲོམ་དེ་ནང་ འབྲུག་བཟའ་སྤྱོད་ལས་འཛིན་ གྱི་མཛོད་ཁང་དང་ ཚལ་ལུ་དང་ཀེ་བ་ཚུ་རིན་བསྡ྄ར་འབད་སའི་རིན་བསྡུར་ཁང་ཚུ་ཡང་ཡོདཔཨིན། ཨིན་རུང་ འཕྲལ་འཕྲལ་སྦེ་ར་ ཨ་སམ་གྱི་བྲེལ་ ཟིང་འདི་འཐོན་ནི་ཡོད་མི་འདི་གིས་ ཐོན་སྐྱེས་དང་ཅ་ཆས་ཚུ་ཕྱིར་ཚོང་འཐབ་ནིའི་ནང་གདོང་ལེན་བྱུང་དོ་ཡོདཔ་ཨིན་མས། རྫོང་ཁག་འདི་གིས་ ཁོང་རའི་འཆར་སྣང་ མི་སྡེ་དཔལ་འབྱོར་གྱི་གནས་ཚད་ རང་བཞིན་ཐོན་སྐྱེད་དང་ སྔར་སྲོལ་ལམ་ལུགས་ཀྱི་ཡར་སྐྱེད་ དང་ཅིག་ཁར་ ཞི་བདེ་དང་མཐུན་པའི་རང་མགོ་རང་འདྲོང་གི་རྫོང་ཁག་ཅིག་སྦེ་བཟོ་ནི་དང་ དེའི་དམིགས་གཏད་ གྲོང་གསེབ་ཀྱི་འཚོ་བའི་ མཐུན་རྐྱེན་ གཞུང་སྐྱོང་ལེགས་ལྡན་ཐོག་ལུ་ ལམ་སྲོལ་དང་རང་བཞིན་གནས་སྟངས་དང་མཐུནམ་སྦེ་ ཡར་དྲག་གཏང་ནིའི་ནང་ གཙོ་བོར་བཟུང་སྟེ་ ལཱ་ཚུ་འབད་དོ་ཡོདཔ་ཨིན་མས།</big>
+
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
@@ -74,3 +83,4 @@
 # Wikipedia contributors. (2021). Chukha District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Chukha_District&oldid=1053307238
 # Wikipedia contributors. (2021). Haa district. In Wikipedia, The Free Encyclopedia. Retrieved from  https://nl.wikipedia.org/w/index.php?title=Haa_(district)&oldid=49239570.
 # Wikipedia contributors. (2021). Pemagatshel District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Pemagatshel_District&oldid=1055317735
+# Wikipedia contributors. (2021). Samdrup Jongkhar. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Samdrup_Jongkhar&oldid=1052289019
