--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -72,6 +72,15 @@
 རྫོང་ཁག་གི་ས་གཞི་ཡོངས་བསྡོམས་ལས་ བརྒྱ་ཆ་ ༨༦.༡༥ འདི་ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ད་ བརྒྱ་ཆ་ ༩༩ དེ་ཅིག་ལུ་ ཉེན་སྲུང་ལྡན་པའི་འཐུང་ཆུ་དང་ བརྒྱ་ཆ་ ༨༧.༡ ལུ་ གློག་མེའི་མཐུན་རྐྱེན་ཚུ་ཡོདཔ་མ་ཚད་ བྲི་ལྷག་ཤེས་ཡོན་གྱི་གནས་ཚད་ བརྒྱ་ཆ་ ༥༢.༤ ཡོད་པའི་གུར་ འགྲུལ་འཕྲིན་གྱི་ཞབས་ཏོག་ བརྒྱ་ཆ་ ༩༧ དང་ བརྒྱ་ཆ་ ༧༤ གི་རྩིས་ སོ་ནམ་ཞིང་ལམ་གྱི་མཐུད་འབྲེལ་ཚུ་འབད་དེ་ཡོདཔ་ཨིན་མས། གྲུབ་འབྲས་འདི་ཚུ་གིས་རྫོང་ཁག་ནང་ མི་སྡེ་དཔལ་འབྱོར་ཡར་དྲག་ འགྱོ་བའི་བརྡ་ཚོན་ཚུ་སྟོནམ་ཨིན་མས། <br>
 བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་འདི་ པདྨ་དགའ་ཚལ་དང་བཀྲ་ཤིས་སྒང་ བཀྲ་ཤིས་གཡང་རྩེ་ ལྷུན་རྩེ་ མོང་སྒར་ཚུ་རྩིས་པའི་ ཤར་ཕྱོགས་རྫོང་ཁག་ལྔ་གི་དོན་ལུ་ ཚོང་འབྲེལ་འཐབ་སའི་ལྟེ་བ་ཅིག་ཨིན། བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་གི་ཁྲོམ་འདི་ རྒྱ་གར་གྱི་ས་མཚམས་དང་མཐུད་འབྲེལ་འབད་དེ་ཡོད་མི་འདི་གིས་ བསམ་གྲུབ་ལྗོངསམཁར་རྫོང་ཁག་རྐྱངམ་ཅིག་མེན་པར་ ཉེ་འདབས་ཀྱི་ ཤར་ཕྱོགས་རྫོང་ཁག་ཚུ་ལུ་ཡང་འདྲན་འདྲ་སྦེ་རང་ཕན་ཐོགས་དོ་ཡོདཔ་ཨིན་མས། རྫོང་ཁག་གི་ཁྲོམ་དེ་ནང་ འབྲུག་བཟའ་སྤྱོད་ལས་འཛིན་ གྱི་མཛོད་ཁང་དང་ ཚལ་ལུ་དང་ཀེ་བ་ཚུ་རིན་བསྡ྄ར་འབད་སའི་རིན་བསྡུར་ཁང་ཚུ་ཡང་ཡོདཔཨིན། ཨིན་རུང་ འཕྲལ་འཕྲལ་སྦེ་ར་ ཨ་སམ་གྱི་བྲེལ་ ཟིང་འདི་འཐོན་ནི་ཡོད་མི་འདི་གིས་ ཐོན་སྐྱེས་དང་ཅ་ཆས་ཚུ་ཕྱིར་ཚོང་འཐབ་ནིའི་ནང་གདོང་ལེན་བྱུང་དོ་ཡོདཔ་ཨིན་མས། རྫོང་ཁག་འདི་གིས་ ཁོང་རའི་འཆར་སྣང་ མི་སྡེ་དཔལ་འབྱོར་གྱི་གནས་ཚད་ རང་བཞིན་ཐོན་སྐྱེད་དང་ སྔར་སྲོལ་ལམ་ལུགས་ཀྱི་ཡར་སྐྱེད་ དང་ཅིག་ཁར་ ཞི་བདེ་དང་མཐུན་པའི་རང་མགོ་རང་འདྲོང་གི་རྫོང་ཁག་ཅིག་སྦེ་བཟོ་ནི་དང་ དེའི་དམིགས་གཏད་ གྲོང་གསེབ་ཀྱི་འཚོ་བའི་ མཐུན་རྐྱེན་ གཞུང་སྐྱོང་ལེགས་ལྡན་ཐོག་ལུ་ ལམ་སྲོལ་དང་རང་བཞིན་གནས་སྟངས་དང་མཐུནམ་སྦེ་ ཡར་དྲག་གཏང་ནིའི་ནང་ གཙོ་བོར་བཟུང་སྟེ་ ལཱ་ཚུ་འབད་དོ་ཡོདཔ་ཨིན་མས།</big>
 
+=== བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་ཁག། ===
+<big>༉ བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་ཚུ་གི་གྲས་ལས་ ཤར་ཕྱོགས་ཁ་ཐུག་ལུ་ཡོད་པའི་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་འདི་ ཧེ་མ་ཚར་ཅིག་ བཀྲ་ཤིས་སྒང་རྫོང་ཁག་མངའ་འོག་གི་དྲུང་ཁག་ཅིག་སྦེ་སྡོད་ཡོད་རུང་ ཤུལ་ལས་ སྤྱི་ལོ་ ༡༩༩༢ ལོ་ལུ་ ལོགས་སུ་སྦེ་རྫོང་ཁག་ཅིག་སྦེ་གཞི་བཙུགས་འབད་ནུག། <br>
+ས་གཞི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༡༤༣༧.༩ འབད་མི་རྫོང་ཁག་འདི་ རྒྱ་མཚོའི་མཐའ་མ་ལས་ མཐོ་ཚད་ཀི་ལོ་མི་ཊར་ ༡༧༥༠ ལས་ ༡༨༨༠ ཚུ་གྱི་ས་ཁར་ཆགས་ཏེ་ཡོདཔ་ད་ བཀྲ་ཤིས་གཡང་རྩེ་ཟེར་བའི་མིང་དེ་ཡང་ དུས་རབས་ ༡༥ པའི་ནང་ རིག་འཛིན་ཆེན་པོ་ གཏེར་སྟོན་པདྨ་གླིང་པ་མཆོག་གིས་གནང་ཡོདཔ་ཨིན་མས། <br>
+རྫོང་ཁག་འདི་ནང་ འབུམ་སྡེ་གླིང་རྒེད་འོག་དང་འཇམ་མཁར་རྒེད་འོག་ ཁམས་དྭངས་རྒེད་འོག་ རམ་སྦྱར་རྒེད་འོག་ སྟོད་མཚོ་རྒེད་འོག་ སྟོང་ཞང་རྒེད་འོག་ གཡང་རྩེ་རྒེད་འོག་ ཡ་ལངས་རྒེད་འོག་བཅས་ རྒེད་འོག་བརྒྱད་ཡོདཔ་ད་ རྫོང་ཁག་འདི་ ལམ་སྲོལ་དང་རང་བཞིན་གནས་སྟངས་ཀྱིས་ཕྱུག་པའི་རྫོང་ཁག་ཅིག་ཨིན། རྫོང་ཁག་དེ་ནང་གི་བྱང་ཁ་ཐུག་གི་མི་ཚུ་ལུ་ ཤིང་བཟོ་དང་དལ་ཤོག་བཟོ་ནིའི་ལག་རྩལ་འདི་ཡོདཔ་ལས་ ཁོང་ཚུ་གིས་ འཚོ་བ་གཙོ་བོ་ འདི་ལུ་བརྟེན་ སྐྱོང་དོ་ཡོདཔ་ད་ ལྷོ་ཁ་ཐུག་གི་མི་ཚུ་གིས་འབད་བ་ཅིན་ སོ་ནམ་དང་སྒོ་ནོར་ དངུལ་ཐོག་ཚུ་ལུ་བརྟེན་ཏེ་སྡོད་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་དེ་ནང་ མི་རློབས་བསྡོམས་ ༡༧༣༠༠ དེ་ཅིག་ཡོདཔ་ཨིན། <br>
+རྫོང་ཁག་འདི་ནང་ ཁ་སྐད་ཀྱི་རིགས་མ་འདྲཝ་གསུམ་དེ་ཅིག་སླབ་མི་ཡོདཔ་ད་ དེ་ཡང་ འབུམ་སྡེ་གླིང་རྩིས་པའི་བྱང་ཕྱོགས་ཁ་ཐུག་ལུ་ ཛ་ལ་ཁ་སླབ་དོ་ཡོདཔ་ད་ འཇམ་མཁར་དང་ཁམས་དྭངས་ ཡ་ལངས་དང་རམ་སྦྱར་ལ་སོགས་པའི་ལྷོ་ཕྱོགས་ཁ་ཐུག་ལུ་འབད་བ་ཅིན་ ཤར་ཕྱོགས་ཚངས་ལྷའི་ཁ་སྐད་དེ་སླབ་དོ་ཡོདཔ་མ་ཚད་ སྟོང་ཞང་རྒེད་འོག་ནང་འབད་བ་ཅིན་ ཁྱོད་ཅག་ང་ཅག་དང་ཁེངས་ཁ་ཚུ་སླབ་དོ་ཡོདཔ་ཨིན།<br>
+བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་ཁག་འདི་ རང་བཞིན་གནས་སྟངས་ཀྱི་ཕྱུག་པའི་རྫོང་ཁག་ཅིག་འབདཝ་ལས་ དེ་ནང་ ཁོ་ལོང་ཆུ་རི་དྭགས་སྲུང་སྐྱོབས་ས་ཁོངས་ཡོདཔ་ད་ དེ་ཡང་ སྤྱི་ལོ་ ༡༩༩༣ ལུ་ གཞི་བཙུགས་འབད་ནུག། དེ་མ་ཚད་ རྫོང་ཁག་འདི་ནང་ འབུམ་སྡེ་གླིང་རི་དྭགས་སྲུང་སྐྱོང་ས་ཁོངས་ཡང་ཡོདཔ་ད་ འདི་གིས་ རྫོང་ཁག་འདི་གི་བྱང་ཁ་ཐུག་གི་ས་གནས་ཕྱེད་ཀ་ཅིག་ཁྱབ་ཏེ་ཡོདཔ་ཨིན།<br>
+རྫོང་ཁག་འདི་ ཨྱོན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་གིས་བྱིན་གྱིས་བརླབས་གནང་ཡོད་པའི་རྫོང་ཁག་ཅིག་འབདཝ་ལས་དེ་ནང་ ག་ནི་བ་རྩ་ཆེ་བའི་གནས་དང་ལྷ་ཁང་དགོན་སྡེ་མང་རབས་ཅིག་ཡོདཔ་ཨིན། དེ་ཚུ་གི་གྲས་ལས་ རྒྱལ་རབས་ནང་གལ་གནད་ཆེ་ཤོས་གཅིགཔོ་འདི་  རིགས་གསུམ་མགོན་པོའི་ལྷ་ཁང་འདི་ཨིན། ལྷ་ཁང་འདི་ དུས་རབས་ ༡༨ པའི་ནང་ རྗེ་མཁན་ཁྲི་རབས་ ༩ པ་ རྒྱལ་དབང་ཤཀྱཱ་རིན་ཆེན་གྱི་སློབ་མ་ བླམ་ཚེ་རིང་རྒྱ་མཚོ་མཆོག་གིས་ བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་ཁག་ལྟེ་བའི་བྱང་ཁ་ཐུག་ རིགས་གསུམ་མགོན་པོའི་སྐུ་རྗེས་ཡོད་སའི་བྱག་ཕུག་ཅིག་གུར་ བཞེངས་གནང་ནུག། དེ་ལས་ཚུར་ བླམ་བྱང་ཆུབ་རྒྱལ་མཚན་དང་ བླམ་ངག་དབང་བློ་གྲོས་ ལ་སོགས་པའི་སྐྱེས་བུ་དམ་པ་ཚུ་གིས་ ལྷ་ཁང་འདི་རྒྱ་སྐྱེད་གནང་སྟེ་ སྐུ་གསུང་ཐུགས་རྟེན་ཚུ་ཡང་ཕུལ་ཏེ་ ད་རེས་ མཇལ་ནི་ཡོད་པའི་གནས་ཚད་ཁར་བཀོད་གནང་ནུག། རྫོང་ཁག་འདི་ནང་ རྩ་ཆེ་བའི་གནས་ རིགས་གསུམ་དགོན་པོ་རྐྱངམ་ཅིག་གིས་མ་དོ་བར་ གཞན་ཡང་ ཨོཾ་བྷ་གནས་དང་དགོངས་ཟ་གནས་ མཆོད་རྟེན་སྐོར་ར་དང་བདེ་ཆེན་ཕོ་བྲང་ སྒོམ་ཕུག་སྐོར་ར་ལ་སོགས་པའི་གནས་རྩ་ཆེ་ཏོག་ཏོ་ལེ་ཤ་ཡོདཔ་ཨིན། <br>
+བཀྲ་ཤིས་གཡང་རྩེ་འདི་ ཤིང་གི་ཟླ་པ་གིས་ཡོངས་གྲགས་ཡོད་པའི་རྫོང་ཁག་ཅིག་ཨིནམ་ད་ རྫོང་ཁག་འདི་ནང་ བཟོ་རིགས་བཅུ་གསུམ་ལྷབ་སྦྱང་འབད་སའི་སྤེལ་ཁང་ཅིག་ཡང་གཞི་བཙུགས་འབད་དེ་་ཡོདཔ་ཨིན།<br>
+རྫོང་ཁག་འདི་གིས་ གཞན་མི་རྫོང་ཁག་བཟུམ་སྦེ་ར་ གོང་འཕེལ་དང་འབྲེལ་བའི་ལས་སྣ་དང་འཆར་གཞི་ག་ཅི་ར་བརྩམ་རུང་ ཁོང་རའི་འཆར་སྣང་ མི་སྡེ་གཅིག་མཐུན་དང་འཚོ་བའི་གནས་སྟངས་ཡར་དྲགས་ཀྱི་སྒོ་ལས་ ལམ་སྲོལ་དང་རང་བཞིན་གནས་སྟངས་གྱིས་ཕྱུག་པའི་དཔེ་སྟོན་གྱི་རྫོང་ཁག་ཅིག་སྦེ་བཟོ་ནི་དང་ དེའི་དམིགས་སྐྱེད་ སྔར་སྲོལ་ལམ་ལུགས་ཉམས་སྲུང་དང་བདག་འཛིན། རང་བཞིན་ཐོན་སྐྱེད་ལག་ལེན་འདྲ་མཉམ། སྤུས་ཚད་ཅན་གྱི་གཞི་རྟེན་མཁོ་ཆས་ཚུ་བཟོ་ནི། མི་མང་ཞབས་ཏོག་ཕན་ནུས་ཅན་ཅིག་སྦེ་བྱིན་ནི། འཚོ་བའི་གནས་སྟངས་ཡར་དྲག་གཏང་ནི་ཚུ་གི་ལྟ་བ་དང་མཐུནམ་སྦེ་འབད་དོ་ཡོདཔ་ཨིན།</big>
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
@@ -84,3 +93,4 @@
 # Wikipedia contributors. (2021). Haa district. In Wikipedia, The Free Encyclopedia. Retrieved from  https://nl.wikipedia.org/w/index.php?title=Haa_(district)&oldid=49239570.
 # Wikipedia contributors. (2021). Pemagatshel District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Pemagatshel_District&oldid=1055317735
 # Wikipedia contributors. (2021). Samdrup Jongkhar. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Samdrup_Jongkhar&oldid=1052289019
+# Wikipedia contributors. (2021). Trashiyangtse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trashiyangtse_District&oldid=1061611825
