--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -81,6 +81,11 @@
 རྫོང་ཁག་འདི་ ཨྱོན་གུ་རུ་རིན་པོ་ཆེ་མཆོག་གིས་བྱིན་གྱིས་བརླབས་གནང་ཡོད་པའི་རྫོང་ཁག་ཅིག་འབདཝ་ལས་དེ་ནང་ ག་ནི་བ་རྩ་ཆེ་བའི་གནས་དང་ལྷ་ཁང་དགོན་སྡེ་མང་རབས་ཅིག་ཡོདཔ་ཨིན། དེ་ཚུ་གི་གྲས་ལས་ རྒྱལ་རབས་ནང་གལ་གནད་ཆེ་ཤོས་གཅིགཔོ་འདི་  རིགས་གསུམ་མགོན་པོའི་ལྷ་ཁང་འདི་ཨིན། ལྷ་ཁང་འདི་ དུས་རབས་ ༡༨ པའི་ནང་ རྗེ་མཁན་ཁྲི་རབས་ ༩ པ་ རྒྱལ་དབང་ཤཀྱཱ་རིན་ཆེན་གྱི་སློབ་མ་ བླམ་ཚེ་རིང་རྒྱ་མཚོ་མཆོག་གིས་ བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་ཁག་ལྟེ་བའི་བྱང་ཁ་ཐུག་ རིགས་གསུམ་མགོན་པོའི་སྐུ་རྗེས་ཡོད་སའི་བྱག་ཕུག་ཅིག་གུར་ བཞེངས་གནང་ནུག། དེ་ལས་ཚུར་ བླམ་བྱང་ཆུབ་རྒྱལ་མཚན་དང་ བླམ་ངག་དབང་བློ་གྲོས་ ལ་སོགས་པའི་སྐྱེས་བུ་དམ་པ་ཚུ་གིས་ ལྷ་ཁང་འདི་རྒྱ་སྐྱེད་གནང་སྟེ་ སྐུ་གསུང་ཐུགས་རྟེན་ཚུ་ཡང་ཕུལ་ཏེ་ ད་རེས་ མཇལ་ནི་ཡོད་པའི་གནས་ཚད་ཁར་བཀོད་གནང་ནུག། རྫོང་ཁག་འདི་ནང་ རྩ་ཆེ་བའི་གནས་ རིགས་གསུམ་དགོན་པོ་རྐྱངམ་ཅིག་གིས་མ་དོ་བར་ གཞན་ཡང་ ཨོཾ་བྷ་གནས་དང་དགོངས་ཟ་གནས་ མཆོད་རྟེན་སྐོར་ར་དང་བདེ་ཆེན་ཕོ་བྲང་ སྒོམ་ཕུག་སྐོར་ར་ལ་སོགས་པའི་གནས་རྩ་ཆེ་ཏོག་ཏོ་ལེ་ཤ་ཡོདཔ་ཨིན། <br>
 བཀྲ་ཤིས་གཡང་རྩེ་འདི་ ཤིང་གི་ཟླ་པ་གིས་ཡོངས་གྲགས་ཡོད་པའི་རྫོང་ཁག་ཅིག་ཨིནམ་ད་ རྫོང་ཁག་འདི་ནང་ བཟོ་རིགས་བཅུ་གསུམ་ལྷབ་སྦྱང་འབད་སའི་སྤེལ་ཁང་ཅིག་ཡང་གཞི་བཙུགས་འབད་དེ་་ཡོདཔ་ཨིན།<br>
 རྫོང་ཁག་འདི་གིས་ གཞན་མི་རྫོང་ཁག་བཟུམ་སྦེ་ར་ གོང་འཕེལ་དང་འབྲེལ་བའི་ལས་སྣ་དང་འཆར་གཞི་ག་ཅི་ར་བརྩམ་རུང་ ཁོང་རའི་འཆར་སྣང་ མི་སྡེ་གཅིག་མཐུན་དང་འཚོ་བའི་གནས་སྟངས་ཡར་དྲགས་ཀྱི་སྒོ་ལས་ ལམ་སྲོལ་དང་རང་བཞིན་གནས་སྟངས་གྱིས་ཕྱུག་པའི་དཔེ་སྟོན་གྱི་རྫོང་ཁག་ཅིག་སྦེ་བཟོ་ནི་དང་ དེའི་དམིགས་སྐྱེད་ སྔར་སྲོལ་ལམ་ལུགས་ཉམས་སྲུང་དང་བདག་འཛིན། རང་བཞིན་ཐོན་སྐྱེད་ལག་ལེན་འདྲ་མཉམ། སྤུས་ཚད་ཅན་གྱི་གཞི་རྟེན་མཁོ་ཆས་ཚུ་བཟོ་ནི། མི་མང་ཞབས་ཏོག་ཕན་ནུས་ཅན་ཅིག་སྦེ་བྱིན་ནི། འཚོ་བའི་གནས་སྟངས་ཡར་དྲག་གཏང་ནི་ཚུ་གི་ལྟ་བ་དང་མཐུནམ་སྦེ་འབད་དོ་ཡོདཔ་ཨིན།</big>
+=== བཀྲིས་སྒང་རྫོང་ཁག། ===
+<big>༉ བཀྲ་ཤིས་སྒང་རྫོང་ཁག་འདི་ འབྲུག་གི་རྫོང་ཁག་ཚུ་གི་གྲས་ལས་ གཅིག་ཨིན།  རྫོང་འདི་འགོ་ཐོག་ར་ལྷ་སྲས་གཙང་མའི་གདུང་རྒྱུད་རིམ་པར་མཆེད་མི་ལས་ ཝང་སེང་ཀུང་པའི་རྒྱལ་རིགས་ལས་ཐོས་པ་ཟེར་མིའི་བུ་རྒྱུད་ལས་ རྒྱལ་པོ་གསེར་གདུང་གི་བུ་ཁུ་ནུ། དེའི་བུ་ཁ་མཁས། དངོས། རྒྱ་མཚོ་དབང་ཟེར་མི་གསུམ་བྱུང་ཡོད་མི་ལས་ དངོས་ཟེར་མིའི་བུ་རྒྱུད་ལས་མཆེད་མི་ སླ་ང་ཟེར་མི་དེ་གིས་ ཝེང་མཁར་གྲོང་སྟོད་ལུ་ སྐྱིད་ལིང་མཁར་རྐྱབ་སྟེ་ རྒྱལ་པོ་སླ་ང་ཟེར་མི་དང་ རྒྱ་མཚོ་དབང་གྱི་བུ་རྒྱུད་ལས་མཆེད་མི་ རྒྱལ་པོ་ཚེ་དབང་གཉིས་ཀྱི་ངོ་བསྒང་ལུ་ དཔལ་ལྡན་ཆོས་རྗེ་འབྲུག་པ་ལུ་མགུ་བཏགས་ཏེ་ རྫོང་དེ་ཕུལ་ཞིན་ན་ལས་ཚུར་ ཞབས་དྲུང་རིན་པོ་ཆེའི་ལུང་བསྟན་དང་ སྤྱི་བླ་མི་འགྱུར་བརྟན་པའི་བཀའ་བཞིན་དུ་ སྐུ་དྲུང་པད་དཀར་ཆོས་འཕེལ་གྱི་ཐུགས་འཆར་གྱི་བཟོ་བཀོད་དང་འཁྲིལ་ཏེ་ སྐུ་དྲུང་པད་དཀར་ཆོས་འཕེལ་དང་ དབུ་མཛད་དམ་ཆོས་རབ་རྒྱས་རྣམ་གཉིས་ཀྱིས་ ཤར་ཕྱོགས་ལུ་སྐྱིད་གླིང་དགྲ་འདུལ་གྱི་རྫོང་དང་། ལྷོ་ཕྱོགས་ལུ་མཐོང་མཁར་ལྟ་རྫོང་། ནུབ་ཕྱོགས་ལུ་སྒོས་སྲུང་ཕུད་པོ་རྫོང་། བྱང་ཕྱོགས་ལུ་རྫོང་སྨད་ལྟ་རྫོང་ཚུ་གིས་ གླིང་བཞིར་བསྐོར་བའི་ལྟེ་བ་ལུ་ དཔལ་ལྡན་འབྲུག་པ་ཕྱོགས་ལས་རྣམ་པར་རྒྱལ་བའི་ཕོ་བྲང་དེ། རྩ་བ་བརྟན་ཏོག་ཏོ་དང་བཙན་ཏོག་ཏོ་ཡོད་པའི་བྱག་གི་རི་འདི་ རིའི་རྒྱལ་པོ་རི་རབ་ཀྱི་ལྷུན་པོ་བཟུམ་མའི་སྒང་སྦོམ་ཚུ་ཡང་། ཤར་ཕྱོགས་ལུ་རང་གཤིས་མཁར། ལྷོ་ཕྱོགས་ལུ་བསམ་མཁར། བྱང་ཕྱོགས་ལུ་སྦིས་མཁར་བཅས་ མཁར་གསུམ་འཛོམས་པའི་སྦུག་ལུ་དང་། ལྷོ་ལས་བལྟ་བ་ཅིན་ གསེར་གྱི་མནྚལ་གུར་ གཡུ་ཡི་ཚོམ་བུ་བྱུར་བཞག་བཞགཔ་དང་། ནུབ་ལས་བལྟ་བ་ཅིན་ ནོར་བུ་དགོས་འདོད་དཔུང་འཇོམས་ ཁ་ཡར་ལྷོང་བཞག་བཞགཔ། བྱང་ལས་བལྟ་བ་ཅིན་ གླང་ཆེན་ཉལ་བའི་མགུ་ཏོ་བཟུམ། ཕུ་ལས་མར་མུ་ཏིག་གྲང་ཆུ་ འོ་མའི་བདུད་རྩི་བཟུམ་འབབ་མི། གཡང་རྩེ་དང་གོང་རི་ལས་འབབ་མི་ཆུ་ཆེན་ཕོ་མོ་གཉིས་འཛོམས་པའི་ གྲངས་མེད་ཆུ་འདི་ ཉིན་མཚན་མེད་པར་ མ་ལས་ཡར་ ཡོན་ཆབ་ཀྱི་ཚུལ་ལུ་ཕུལ་ཏེ་ཡོད་མིའི་སྒང་ཆེན་དེ་ རང་བཞིན་ལྷུན་གྱིས་གྲུབ་པའི་གནས་མཆོག་ཨིན་པ་མ་ཚད་ ཞབས་དྲུང་རིན་པོ་ཆེ་གི་ལུང་བསྟན་དང་འཁྲིལ་ཏེ་ རྫོང་ཆེན་དེ་བཞེངས་ཞིན་ན་ལས་ཚུར་ ཉི་འོག་ཤར་ཕྱོགས་འཁོར་ལོ་རྩིབས་བརྒྱད་ཆ་མཉམ་ དཔལ་ལྡན་འབྲུག་པའི་མངའ་འོག་ལུ་བསྡུ་ཚར་ཏེ་ བཀྲ་ཤིས་པའི་རྫོང་ཆེན་ཅིག་འབད་ནི་འདི་གིས་ རྫོང་གི་མཚན་ཡང་བཀྲ་ཤིས་སྒང་རྫོང་ཟེར་གསོལ་ནུག། <br>
+བཀྲ་ཤིས་སྒང་རྫོང་འདི་ ཀྲོང་གསར་དཔོན་སློབ་ ཆོས་རྒྱལ་མི་འགྱུར་བརྟན་པ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༦༥༩ ལུ་ བཞེངས་གནང་ནུག། རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་ཚུ་གི་གྲས་ལས་ སྦོམ་ཤོས་ཅིག་ཨིནམ་ད་ རྒྱ་ཚད་ཀི་ལོ་མི་ཊར་ ༢༢༠༤.༥ འབད་མི་རྫོང་ཁག་འདི་ རྒྱ་མཚོའི་མཐའ་མ་ལས་ མི་ཊར་ ༦༠༠ ལས་ ༤༥༠༠ ཚུན་དང་ རྒྱལ་ས་ལྟེ་བ་ཐིམ་ཕུག་ལས་ ཤར་ཁ་ཐུག་ ཀི་ལོ་མི་ཊར་ ༥༥༡ གི་ས་ཁར་ཆགས་ཏེ་ཡོད། ཁྱིམ་གུང་ ༨༦༡༠ འབད་མི་རྫོང་ཁག་འདི་ནང་ མི་རློབས་ ༧༡༧༦༨ དེ་ཅིག་ཡོདཔ་ད་ དེ་ཁའི་མི་ཚུ་ འཚོ་བ་གཙོ་བོ་སོ་ནམ་དང་སྒོ་ནོར་ལུ་བརྟེན་ཏེ་སྡོད་དོ་ཡོདཔ་ཨིན།  རྫོང་ཁག་འདི་གི་ས་གཞི་ཡོངས་བསྡོམས་ལས་ བརྒྱ་ཆ་ ༧༧.༨༧ དེ་ཅིག་ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ད་ དེ་ནང་ བཟའ་སྤྱོད་འབད་བཏུབ་པའི་ས་གཞི་ བརྒྱ་ཆ་ ༣.༦༤ ལས་བརྒལ་མེདཔ་ཨིན། བཀྲ་ཤིས་སྒང་རྫོང་འདི་ རྫོང་ཁག་བདག་སྐྱོང་དང་ རྫོང་ཁག་རབ་སྡེ་གི་དོན་ལུ་ལག་ལེན་འཐབ་དོ་ཡོདཔ་མ་ཚད་ རྫོང་དེ་ཡང་ བསམ་མཁར་རྒེད་འོག་གི་འོག་ལུ་ཡོད་པའི་ མི་ཐི་བྲང་ཟེར་ས་ལུ་ཆགས་སྟེ་ཡོད། རྫོང་ཁག་དེ་ནང་ སགསྟེང་དྲུང་ཁག་དང་ཝམ་རོང་དྲུང་ཁག་ ཁྲིམས་ཤིང་དྲུང་ཁག་བཅས་དྲུང་ཁག་གསུམ་དང་  བར་མཚམས་རྒེད་འོག་དང་སྦིས་གདུང་རྒེད་འོག་ བཀང་ལུང་རྒེད་འོག་ རྐང་པར་རྒེད་འོག་ མཁའ་གླིང་རྒེད་འོག་ ཀླུ་མང་རྒེད་འོག་ མེ་རག་རྒེད་འོག་ ཕོངས་མེད་རྒེད་འོག་ ར་སྡི་རྒེད་འོག་ སག་སྟེང་རྒེད་འོག་ བསམ་མཁར་རྒེད་འོག་ ཤོང་ཕུག་རྒེད་འོག་ ཁྲིམས་ཤིང་རྒེད་འོག་ ཨུ་ཛོ་རོང་རྒེད་འོག་ གཡང་གཉེར་རྒེད་འོག་བཅས་རྒེད་འོག་བཅོ་ལྔ་དང་ སྤྱི་འོག་ ༧༩ ཡོདཔ་ད་ རྒེད་འོག་དང་སྤྱི་འོག་ག་རའི་ནང་ གློག་མེ་དང་འཁོར་ལམ་ འགྲུལ་འཕྲིན་གྱི་ཞབས་ཏོག་ཚུ་ལྷོད་དེ་ཡོདཔཨིན། རྫོང་ཁག་འདི་ནང་ བྱིན་རླབས་ཅན་གྱི་གནས་དང་ལྷ་ཁང་དགོན་སྡེ་ལེ་ཤ་ཅིག་ཡོདཔ་མ་ཚད་ ཡོངས་གྲགས་ཅན་གྱི་ཤེས་རབ་རྩེ་མཐོ་རིམ་སློབ་གྲྭ་ཡང་ རྫོང་ཁག་དེ་ནང་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ནང་ ཚ་དྲོད་རན་ཏོག་ཏོ་སྦེ་ཡོདཔ་ལས་ འབྲུ་སྣ་དགུའི་རིགས་ག་ར་འཚོ་དོ་ཡོདཔ་ད་ མི་ཚུ་གི་རྒྱུད་ལུ་ དངུལ་ཐོག་གཙོ་བོ་ ཀེ་བ་དང་ཚལ་ཚུ་འདི་ཨིན་མས།<br>
+རྫོང་ཁག་འདི་གིས་ དཔལ་འབྱོར་གོང་འཕེལ་གྱི་ལས་སྣ་དང་འཆར་གཞི་ ག་ཅི་ར་བརྩམ་རུང་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་ལྟ་དང་མཐུནམ་སྦེ་འབད་དོ་ཡོདཔ་ཨིན།</big>
+
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
@@ -94,3 +99,4 @@
 # Wikipedia contributors. (2021). Pemagatshel District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Pemagatshel_District&oldid=1055317735
 # Wikipedia contributors. (2021). Samdrup Jongkhar. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Samdrup_Jongkhar&oldid=1052289019
 # Wikipedia contributors. (2021). Trashiyangtse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trashiyangtse_District&oldid=1061611825
+# Wikipedia contributors. (2021). Trashigang. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trashigang&oldid=1052260622
