--- a/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
+++ b/རྫོང་ཁག་ཚུའི་བཅུད་སྡུད།.mw
@@ -86,6 +86,14 @@
 བཀྲ་ཤིས་སྒང་རྫོང་འདི་ ཀྲོང་གསར་དཔོན་སློབ་ ཆོས་རྒྱལ་མི་འགྱུར་བརྟན་པ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༦༥༩ ལུ་ བཞེངས་གནང་ནུག། རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་ཚུ་གི་གྲས་ལས་ སྦོམ་ཤོས་ཅིག་ཨིནམ་ད་ རྒྱ་ཚད་ཀི་ལོ་མི་ཊར་ ༢༢༠༤.༥ འབད་མི་རྫོང་ཁག་འདི་ རྒྱ་མཚོའི་མཐའ་མ་ལས་ མི་ཊར་ ༦༠༠ ལས་ ༤༥༠༠ ཚུན་དང་ རྒྱལ་ས་ལྟེ་བ་ཐིམ་ཕུག་ལས་ ཤར་ཁ་ཐུག་ ཀི་ལོ་མི་ཊར་ ༥༥༡ གི་ས་ཁར་ཆགས་ཏེ་ཡོད། ཁྱིམ་གུང་ ༨༦༡༠ འབད་མི་རྫོང་ཁག་འདི་ནང་ མི་རློབས་ ༧༡༧༦༨ དེ་ཅིག་ཡོདཔ་ད་ དེ་ཁའི་མི་ཚུ་ འཚོ་བ་གཙོ་བོ་སོ་ནམ་དང་སྒོ་ནོར་ལུ་བརྟེན་ཏེ་སྡོད་དོ་ཡོདཔ་ཨིན།  རྫོང་ཁག་འདི་གི་ས་གཞི་ཡོངས་བསྡོམས་ལས་ བརྒྱ་ཆ་ ༧༧.༨༧ དེ་ཅིག་ ནགས་ཚལ་གྱིས་ཁྱབ་སྟེ་ཡོདཔ་ད་ དེ་ནང་ བཟའ་སྤྱོད་འབད་བཏུབ་པའི་ས་གཞི་ བརྒྱ་ཆ་ ༣.༦༤ ལས་བརྒལ་མེདཔ་ཨིན། བཀྲ་ཤིས་སྒང་རྫོང་འདི་ རྫོང་ཁག་བདག་སྐྱོང་དང་ རྫོང་ཁག་རབ་སྡེ་གི་དོན་ལུ་ལག་ལེན་འཐབ་དོ་ཡོདཔ་མ་ཚད་ རྫོང་དེ་ཡང་ བསམ་མཁར་རྒེད་འོག་གི་འོག་ལུ་ཡོད་པའི་ མི་ཐི་བྲང་ཟེར་ས་ལུ་ཆགས་སྟེ་ཡོད། རྫོང་ཁག་དེ་ནང་ སགསྟེང་དྲུང་ཁག་དང་ཝམ་རོང་དྲུང་ཁག་ ཁྲིམས་ཤིང་དྲུང་ཁག་བཅས་དྲུང་ཁག་གསུམ་དང་  བར་མཚམས་རྒེད་འོག་དང་སྦིས་གདུང་རྒེད་འོག་ བཀང་ལུང་རྒེད་འོག་ རྐང་པར་རྒེད་འོག་ མཁའ་གླིང་རྒེད་འོག་ ཀླུ་མང་རྒེད་འོག་ མེ་རག་རྒེད་འོག་ ཕོངས་མེད་རྒེད་འོག་ ར་སྡི་རྒེད་འོག་ སག་སྟེང་རྒེད་འོག་ བསམ་མཁར་རྒེད་འོག་ ཤོང་ཕུག་རྒེད་འོག་ ཁྲིམས་ཤིང་རྒེད་འོག་ ཨུ་ཛོ་རོང་རྒེད་འོག་ གཡང་གཉེར་རྒེད་འོག་བཅས་རྒེད་འོག་བཅོ་ལྔ་དང་ སྤྱི་འོག་ ༧༩ ཡོདཔ་ད་ རྒེད་འོག་དང་སྤྱི་འོག་ག་རའི་ནང་ གློག་མེ་དང་འཁོར་ལམ་ འགྲུལ་འཕྲིན་གྱི་ཞབས་ཏོག་ཚུ་ལྷོད་དེ་ཡོདཔཨིན། རྫོང་ཁག་འདི་ནང་ བྱིན་རླབས་ཅན་གྱི་གནས་དང་ལྷ་ཁང་དགོན་སྡེ་ལེ་ཤ་ཅིག་ཡོདཔ་མ་ཚད་ ཡོངས་གྲགས་ཅན་གྱི་ཤེས་རབ་རྩེ་མཐོ་རིམ་སློབ་གྲྭ་ཡང་ རྫོང་ཁག་དེ་ནང་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ནང་ ཚ་དྲོད་རན་ཏོག་ཏོ་སྦེ་ཡོདཔ་ལས་ འབྲུ་སྣ་དགུའི་རིགས་ག་ར་འཚོ་དོ་ཡོདཔ་ད་ མི་ཚུ་གི་རྒྱུད་ལུ་ དངུལ་ཐོག་གཙོ་བོ་ ཀེ་བ་དང་ཚལ་ཚུ་འདི་ཨིན་མས།<br>
 རྫོང་ཁག་འདི་གིས་ དཔལ་འབྱོར་གོང་འཕེལ་གྱི་ལས་སྣ་དང་འཆར་གཞི་ ག་ཅི་ར་བརྩམ་རུང་ རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་ལྟ་དང་མཐུནམ་སྦེ་འབད་དོ་ཡོདཔ་ཨིན།</big>
 
+=== རྩི་རང་རྫོང་ཁག། ===
+<big>༉ རྩི་རང་རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྫོང་ཁག་ཁལ་གཅིག་གི་གྲས་ལས་ གཅིག་ཨིན། ས་གཞི་རྒྱ་ཚད་ ཀི་ལོ་མི་ཊར་གྲུ་བཞི་ ༦༣༩ འབད་མི་རྫོང་ཁག་འདི་ རྒྱ་མཚའི་ཐོག་ཁ་ལས་ མཐོ་ཚད་མི་ཊར་ ༩༤ ལས་ ༤༨༢༢ ཚུན་གྱི་ས་ཁར་ཆགས་སྟེ་ཡོདཔ་ཨིན།  རྫོང་ཁག་འདི་གི་བདག་སྐྱོང་ལྟེ་བ་འདི་ ས་གནས་འགྲམ་ཕུག་ལུ་ཡོདཔ་ད་ རྫོང་ཁག་འདི་གི་སའི་ཆགས་ཚུལ་དེ་ གྱེན་གཟར་དྲགས་སྦེ་ཡོད་པའི་ཁར་ གནམ་གཤིས་ཡང་ ཚ་དྲོད་རན་ཏོག་ཏོ་སྦེ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་ འབྲུག་རྒྱལ་ཁབ་ནང་ ཕྱོགས་བཞི་ལས་ཕར་ དམ་པའི་ཆོས་ཀྱི་བསྟན་པ་ དར་ནིའི་རྟགས་མཚན་བཟང་པོ་དང་བཅས་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་ ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གིས་ སྤྱི་ལོ་ ༡༦༣༨ ལུ་བཞེངས་གནང་ནུག།<br>
+རྩི་རང་རྫོང་ཁག་འདི་ རང་བཞིན་གནས་སྟངས་དང་སྐྱེ་ལྡན་རིགས་སྣ་གིས་ཕྱུག་པའི་རྫོང་ཁག་ཅིག་སྦེ་ཆ་བཞག་པའི་ཁར་ འབྲུག་རྒྱལ་ཁབ་ཀྱི་ཆུ་ཆེན་ཚུ་གི་ གྲས་ལས་རིང་ཤོས་ཅིག་ཨིན་མི་ སྤུ་ན་གཙང་ཆུ་དེ་ཡང་ རྫོང་ཁག་འདི་ཁར་ལས་བརྒྱུད་དེ་འགྱོཝ་ཨིན། ཨིན་རུང་ ད་ཚུན་གྱི་རིང་ལུ་ རྫོང་ཁག་འདི་ནང་ རྒྱལ་ཡོངས་གླིང་ཀ་དང་སྲུང་སྐྱོབ་ས་ཁོངས་ལ་སོགས་པ་ག་ནི་ཡང་མེདཔ་ཨིན་མས། <br>
+རྩི་རང་རྫོང་ཁག་འདི་ ལྷོ་མཚམས་པ་མང་ཤོས་ཅིག་སྦེ་སྡོད་པའི་རྫོང་ཁག་ཅིག་ཨིནམ་ད་ རྫོང་ཁག་འདི་ནང་ ཁ་སྐད་ཡང་ མང་ཤོས་ ལྷོ་མཚམས་པ་ སླབ་མི་ཡོད་རུང་ རྫོང་ཁག་འདི་ནང་སླབ་སྲོལ་ཡོད་པའི་ལྷོ་མཚམས་པའི་ཁ་སྐད་འདི་ བལ་པོའི་ཁ་སྐད་དང་ཅིག་ཁར་ དུམ་གྲ་རེ་མ་འདྲཝ་སྦེ་ ཡོདཔ་ ཨིན་མས། རྫོང་ཁག་འདི་གི་བྱང་ཁ་ཐུག་ལས་ཕར་སྡོད་མི་ཚུ་གིས་ ང་བཅས་རའི་རྒྱལ་ཡོངས་སྐད་ཡིག་ རྫོང་ཁ་སླབ་མི་ཡང་ དུམ་གྲ་རེ་ཡོདཔ་ཨིན་མས། <br>
+རྩི་རང་རྫོང་ཁག་ནང་ རྒེད་འོག་བཅུ་གཉིས་ཡོད་མི་ཚུ་ཡང་ གདུང་ལ་སྒང་རྒེད་འོག་དང་གསེར་གྱི་ཐང་རྒེད་འོག་ དཀྱིལ་འཁོར་ཐང་རྒེད་འོག་ པ་ཚལ་ གླིང་རྒེད་འོག་ ཕུན་རྟེན་ཆུ་རྒེད་འོག་ བར་གཤོང་རྒེད་འོག་ མནྜལ་སྒང་རྒེད་འོག་ མཚོ་གླིང་མཁར་རྒེད་འོག་ རང་ཐང་གླིང་རྒེད་འོག་ རྩི་རང་སྟོད་ རྒེད་འོག་ སེམས་ལྗོངས་རྒེད་འོག་ སྒོ་སར་གླིང་རྒེད་འོག་ ཚུ་ཨིན།
+རྫོང་ཁག་འདི་ནང་ རིགས་གསུམ་པདྨའི་ལྡུམ་རྭ་དང་པདྨ་ཆོས་གླིང་སྐྱེས་ཚལ་ལྡུ་རྭ་ རྩི་རང་རྣམ་རྒྱལ་ཆོས་གླིང་གྲྭ་ཚང་དང་གནས་ལ་སོགས་པའི་ ས་ཆ་དགའ་ཏོག་ཏོ་ལེ་ཤ་ཡོདཔ་ཨིན།<br>
+རྫོང་ཁག་འདི་གིས་ གོང་འཕེལ་གྱི་ལས་སྣ་དང་འཆར་གཞི་ག་ཅི་ར་བརྩམས་རུང་ ཁོང་རའི་འཆར་སྣང་དང་དམིགས་སྐྱེད་ དམིགས་ཡུལ་ཚུ་ལུ་གཞི་བཞག་ སྟེ་འབད་དོ་ཡོདཔ་ཨིན། རྫོང་ཁག་འདི་གི་འཆར་སྣང་འདི་ཡང་ ཤུགས་ཚད་དང་ལྡན་པའི་དཔལ་འབྱོར། ལམ་སྲོལ་གྱིས་ཕྱུགཔ། ཉམས་མེད་རང་བཞིན་གནས་སྟངས་དང་མཐུན་པའི་རྫོང་ཁག་ཅིག་སྦེ་བཞག་ནི་དང་ དེའི་དམིགས་སྐྱེད་  སྤུད་ཚད་ལྡན་པའི་གཞི་རྟེན་མཁོ་ཆེ་གོང་འཕེལ་གྱི་ཐོག་ལས་ ཡུན་བརྟན་མི་སྡེའི་དཔལ་འབྱོར་གོང་འཕེལ་གཏང་ནི་དང་  འཇོན་ཐང་ཅན་དང་དོན་སྨིན་ཅན་གྱི་མི་དམངས་ཞབས་ཏོག་ཕུལ་ནི། ལམ་སྲོལ་དང་སྔར་སྲོལ་ཚུ་ཉམས་སྲུང་དང་གོང་འཕེལ་གཏང་ནི་ཚུ་ཨིནམ་ མ་ཚད་ དམིགས་ཡུལ་ གྲོང་གསེབ་བཟའ་ཚང་གི་འོང་འབབ་དང་བཟའ་འཐུང་གི་སྲུང་སྐྱོབ་ཡར་དྲག་གཏང་ནི་དང་ཤེས་ཡོན་གྱི་གོ་སྐབས། སྤུས་ཚད། འབྲི་ལྷག་ཤེས་ཡོན་ཚུ་ཡར་དྲག་གཏང་ནི། མི་སྡེའི་གསོ་བ་དང་འཕྲོད་བསྟེན་ཡར་འཕར་གཏང་ནི། གྲམ་ཕུག་ཁྲོམ་གྱི་ཁྲོམ་ཚོགས་གཞི་རྟེན་ཡར་རྒྱས་གཏང་ནི། ཆོས་དང་ལམ་སྲོལ། སྔར་སྲོལ་ཚུ་མི་ཉམས་རྒྱུན་སྐྱོང་དང་གོང་འཕེལ་གཏང་ནི། འཇོན་ཐང་ཅན་དང་དོན་སྨིན་ཅན་གྱི་མི་སྡེ་ཞབས་ཏོག་ཡར་དྲག་གཏང་ནི། ས་གནས་ཀྱི་དཔལ་འབྱོར་རྩ་བརྟན་དང་ཡར་དྲག་གཏང་ནི། རྫོང་ཁག་གི་གནས་ཚད་ནང་ དུས་ཐོག་ལུ་འབྲེལ་བ་ཡོདཔ་དང་བློ་གཏད་ཚུགས་པའི་གནས་སྡུད་དང་གནས་ཚུལ་ཚུ་ཡོདཔ་ངེས་བརྟན་བཟོ་ནི། ངན་ལྷད་སྔོན་འགོག་འབད་ནི་ཚུ་ཨིན་པས།</big>
+
 === ཁུངས་གཏུག། ===
 # Wikipedia contributors. (2021). Daga, Bhutan. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Daga,_Bhutan&oldid=1033941705.
 # Wikipedia contributors. (2021). Lhuntse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Lhuntse_District&oldid=1036483754
@@ -100,3 +108,4 @@
 # Wikipedia contributors. (2021). Samdrup Jongkhar. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Samdrup_Jongkhar&oldid=1052289019
 # Wikipedia contributors. (2021). Trashiyangtse District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trashiyangtse_District&oldid=1061611825
 # Wikipedia contributors. (2021). Trashigang. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Trashigang&oldid=1052260622
+# Wikipedia contributors. (2021). Tsirang District. In Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org/w/index.php?title=Tsirang_District&oldid=1053320229
